@@ -170,6 +170,9 @@ New Artifacts
 - War's Sword
 - Acidfall
 - Sunspot
+- Pridwen
+- Seven-League Boots
+- Balance
 - Sharur (Dragonmaster quest artifact)
 - The Holographic Void Lily (Cartomancer quest artifact)
 - Vladsbane (joke artifact, must be wished for)
